# core

./: .gitignore  250305_note.md  250331_note.md  Cargo.toml  Comparison.md  NOTICE  README.md  manifest.md  requirements.txt
.github/workflows/: rust.yml
art/: Cargo.toml
art/benches/: art_benches.rs
art/src/: display.rs  errors.rs  helper_tools.rs  lib.rs  node_index.rs  tree_methods.rs  tree_node.rs
art/src/aggregations/: aggregated_change.rs  aggregated_node.rs  aggregation_data.rs  related_data.rs
art/src/art/: aggregation_context.rs  aggregations.rs  applicable_change.rs  art_advanced_operations.rs  art_basic_operations.rs  art_node.rs  art_root_key.rs  art_types.rs  artefacts.rs  base_type.rs  branch_change.rs  branch_changes.rs  merge_context.rs  mod.rs  private_art.rs  public_art.rs  tree_methods.rs  verifiable_change.rs  zero_art.rs
art/src/art/aggregations/: mod.rs  tests.rs
art/src/art/private_art/: mod.rs  tests.rs
art/src/art_node/: art_node.rs  binary_tree.rs  mod.rs  tree_methods.rs  utils.rs
art/src/changes/: applicable_change.rs  branch_change.rs  mod.rs  provable_change.rs  verifiable_change.rs
art/src/changes/aggregations/: aggregated_change.rs  aggregated_node.rs  aggregation_data.rs  mod.rs  related_data.rs
art/src/impls/: aggregated_change.rs  aggregated_change_node.rs  aggregation_data.rs  art_node.rs  artefacts.rs  branch_changes.rs  child_container.rs  mod.rs  node_index.rs  node_marker.rs  private_art.rs  private_art_api.rs  public_art.rs  public_art_api.rs  related_data.rs
art/src/traits/: child_container.rs  mod.rs  parent_repr.rs  private_art_api.rs  private_art_view.rs  public_art_api.rs  related_data.rs
art/src/types/: aggregated_change.rs  aggregated_node.rs  aggregation_data.rs  art_node.rs  artefacts.rs  branch_changes.rs  children.rs  direction.rs  mod.rs  node_index.rs  node_marker.rs  private_art.rs  public_art.rs
art/src/zrt_art/: applicable_change.rs  art_advanced_operations.rs  art_basic_operations.rs  art_node.rs  art_types.rs  branch_change.rs  mod.rs  tree_methods.rs  tree_node.rs  verifiable_change.rs
art/tests/: fuz_tests.rs  test_private_art.rs  tests.md  utils.rs
cortado/: Cargo.toml
cortado/src/: cortado.rs  fq.rs  fr.rs  lib.rs  tests.rs
crates/art/: Cargo.toml
crates/art/examples/: simple_workflow.rs
crates/art/src/: art.rs  art_node.rs  art_root_key.rs  branch_changes.rs  errors.rs  helper_tools.rs  lib.rs  private_art.rs
crates/art/src/impls/: art_node.rs  artefacts.rs  branch_changes.rs  mod.rs  node_index.rs  private_art.rs  private_art_api.rs  public_art.rs  public_art_api.rs
crates/art/src/traits/: private_art_api.rs  private_art_view.rs  public_art_api.rs  public_art_view.rs
crates/art/src/types/: art_node.rs  art_root_key.rs  artefacts.rs  branch_changes.rs  direction.rs  mod.rs  node_index.rs  private_art.rs  public_art.rs
crates/art/tests/: fuz_tests.rs  test_art.rs  test_private_art.rs  test_public_art.rs  tests.md  utils.rs
crates/cortado/: Cargo.toml
crates/cortado/src/: cortado.rs  fr.rs  tests.rs
crates/crypto/: Cargo.toml
crates/crypto/src/: lib.rs
crates/hibbe/benches/: art_benches.rs  ibbe_benches.rs
crates/hibbe/src/: art.rs  hybrid_encryption.rs  schnorr.rs  tools.rs
crates/hibbe/tests/: test_hibbe.rs
crates/zk/: Cargo.toml
crates/zk/src/: art.rs  cred.rs  dh.rs  lib.rs
crates/zk/src/curve/: mod.rs
crates/zk/src/curve/cortado/: cortado.rs  fq.rs  fr.rs  tests.rs
crates/zk/src/gadgets/: gadget_zero_nonzero.rs  poseidon_constants_6.rs  poseidon_gadget.rs  r1cs_utils.rs
crates/zk/src/poseidon/: gadget_zero_nonzero.rs  mimc.rs  mod.rs  poseidon_gadget.rs  r1cs_utils.rs
crypto/: Cargo.toml
crypto/src/: lib.rs  schnorr.rs  x3dh.rs
misc/: bn381.sage  ibbe_del7.sage  idbe_delerablee.ipynb  pql_supersingular.sage  time_measurement.sage
misc/chat_node_go/: Dockerfile  go.mod  main.go
notes/: 250414_note.md  Bluesky Review.md  NYM review.md  Nostr Review.md  Simplex Review.md  Wire Review.md  abstract.md
src/: Cargo.toml
src/chat_node/: Cargo.toml  Dockerfile  README.MD
src/chat_node/src/: main.rs  message.rs  test_helper.rs  user_agent.rs
src/hibbe/: Cargo.toml
src/hibbe/src/: art.rs  hybrid_encryption.rs  ibbe_del7.rs  lib.rs
src/hibbe/tests/: test_schnorr.rs
src/mvp/: ag_enc_id.sage  ag_enc_id.sage.py  bn381.sage  dsk_fs_ibbe_del7.sage  fs_ibbe_del7.sage  hash_utils.sage  ibbe_del7.sage  time_evalation.sage  time_measurement.sage
src/network_tests/chat_node_go/: README.md  go.sum  run_tests.sh
src/network_tests/chat_node_rust/: Cargo.toml  Dockerfile  README.MD  run_network.sh
src/network_tests/chat_node_rust/src/: behavior.rs  chat_member.rs  main.rs  message.rs  test_helper.rs
src/relative_implementation/: Cargo.toml
src/relative_implementation/src/: art.rs  hybrid_encryption.rs  ibbe_del7.rs  ibbe_del7_time_measurements.rs  lib.rs  main.rs  schnorr.rs  time_measurements.rs  tools.rs
src/test_implementation/: Cargo.toml  run_trusted_node.sh
src/test_implementation/chat_node_rust/: Cargo.toml
src/test_implementation/hibbe/: Cargo.toml
src/test_implementation/hibbe/src/: art.rs  time_measurements.rs  tools.rs
src/test_implementation/zk/src/: main.rs
src/test_implementation/zk/src/curve/: mod.rs
src/test_implementation/zk/src/curve/g2/: fq.rs  fr.rs  g2.rs  tests.rs
src/zk/: Cargo.toml
src/zk/src/: art.rs  dh.rs  lib.rs  main.rs
src/zk/src/curve/cortado/: mod.rs  tests.rs
src/zk/src/curve/g2/: mod.rs  tests.rs
utils/: Cargo.toml
utils/src/: aggregations.rs  lib.rs
zk/: Cargo.toml
zk/src/: aggregated_art.rs  art.rs  cred.rs  dh.rs  eligibility.rs  engine.rs  errors.rs  lib.rs
zk/src/gadgets/: Poseidon_Ristretto.ipynb  gadget_zero_nonzero.rs  mimc.rs  mod.rs  poseidon_constants_10.rs  poseidon_constants_6.rs  poseidon_gadget.rs  r1cs_utils.rs
