[workspace]
name = "project_m"

members = [
    "crates/art",
    "crates/zk"
]
resolver = "2"

[profile.test]
    inherits = "release"

[workspace.dependencies]
ark-ec = { version = "0.5.0" }
ark-ff = { version = "0.5.0" }
ark-std = { version = "0.5.0" }
ark-serialize = { version = "0.5.0" }
ark-bn254 = { version = "0.5.0" }
rand = { version = "0.9.1" }
serde = { version = "1.0.219" }
serde_json = { version = "1.0.140" }
serde_bytes = { version = "0.11.17" }
criterion = { version = "0.6.0" }
thiserror = {version = "2.0.12"}
