[workspace]
members = [
    "art",
    "zk",
    "crypto",
    "cortado"
]
resolver = "2"

[profile.test]
    inherits = "release"
    overflow-checks = true

[workspace.dependencies]
ark-ec = { version = "0.5.0", git = "https://github.com/arkworks-rs/algebra", rev = "7601bf9" }
ark-ff = { version = "0.5.0", git = "https://github.com/arkworks-rs/algebra", rev = "7601bf9" }
ark-serialize = { version = "0.5.0", git = "https://github.com/arkworks-rs/algebra", rev = "7601bf9", features = ["serde"] }
ark-ed25519 = { version = "0.5.0", git = "https://github.com/arkworks-rs/algebra", rev = "7601bf9" }
ark-std = { version = "0.5.0" }
rand = { version = "0.9.1" }
serde = { version = "1.0.219" }
serde_json = { version = "1.0.140" }
serde_bytes = { version = "0.11.17" }
criterion = { version = "0.6.0" }
thiserror = {version = "2.0.12"}
curve25519-dalek = { version = "4.1.3", features = ["digest", "group", "rand_core", "serde"] }
bulletproofs = { version = "5.0.0", git="https://github.com/zero-art-rs/bulletproofs"}
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"]}
zkp = { version = "0.10.0", git = "https://github.com/juja256/zkp", features = ["rangeproof", "rangeproof_batchable"]}
display_tree = { version = "1.1.2" }
postcard = { version = "1.1.2" }
chrono = {  version = "0.4.41" }
hex = {  version = "0.4.3" }
merlin = {  version = "3.0.0" }
rand_core = {  version = "0.6.4" }
once_cell = { version = "1.21.3" }
hkdf = { version = "0.12.4"}
sha3 = {  version = "0.10.8" }
strum = {  version = "0.27" }
strum_macros = {  version = "0.27" }
itertools = { version = "0.14.0"}
