[package]
name = "zrt-art"
version = "0.1.6"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
name = "art_example"
path = "src/bin/simple_workflow.rs"

#[[bin]]
#name = "simple_benchmarks"
#path = "src/bin/simple_benchmarks.rs"

[[bench]]
name = "art_benches"
harness = false

[features]
fuzz_test = []

[dependencies]
ark-ec = { workspace = true }
ark-ff = { workspace = true }
ark-std = { workspace = true }
ark-serialize = { workspace = true, features = ["derive"] }
ark-ed25519 = { workspace = true }
rand = { workspace = true, features = ["thread_rng"]}
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_bytes = {workspace = true}
criterion = { workspace = true, features = ["csv_output"] }
thiserror = {workspace = true}
zrt-zk = {path = "../zk"}
cortado = {path = "../cortado"}
curve25519-dalek = { version = "4.1.1", features = ["digest", "group", "rand_core", "serde"] }
bulletproofs = { workspace = true }
zkp = { workspace = true, features = ["rangeproof", "rangeproof_batchable"]}
display_tree = {workspace = true}
postcard = { workspace = true, features = ["alloc"] }
tracing-subscriber = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
tree-ds = {  version = "0.2.0" }

[dev-dependencies]
strum ={ workspace = true }
strum_macros = { workspace = true }
itertools = { workspace = true}
