[package]
name = "cortado"
version = "0.1.0"
edition = "2024"

[dependencies]
ark-ec = { workspace = true }
ark-ff = { workspace = true }
ark-std = { workspace = true }
ark-serialize = { workspace = true, features = ["derive"] }
ark-algebra-test-templates = { version = "0.5.0" }
curve25519-dalek = { workspace = true }

[profile.test]
inherits = "release"
