[package]
name = "zrt-crypto"
version = "0.1.0"
edition = "2024"

[dependencies]
hkdf = { workspace = true, features = ["std"] }
zkp = { workspace = true }
thiserror = { workspace = true }
sha3 = { workspace = true }
ark-serialize = { workspace = true }
cortado = { path = "../cortado" }
rand = {  version = "0.8.5" }
rand_core = { workspace = true }
