[package]
name = "zrt-zk"
version = "0.1.0"
edition = "2024"

[dependencies]
cortado = {path = "../cortado"}
ark-ec = { workspace = true }
ark-ff = { workspace = true }
ark-serialize = { workspace = true }
ark-std = { workspace = true }
bulletproofs = { workspace = true, features = ["yoloproofs"] }
curve25519-dalek = { workspace = true, features = ["digest", "group", "rand_core", "serde"] }
ark-ed25519 = { workspace = true }
chrono = { workspace = true }
hex = { workspace = true }
merlin = { workspace = true }
rand = {  version = "0.8.5" }
rand_core = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"]}
zkp = { workspace = true, git = "https://github.com/juja256/zkp", features = ["rangeproof", "rangeproof_batchable"]}
once_cell = { workspace = true }

[profile.test]
inherits = "release"

[features]
cross_sigma = []
multi_thread_prover = []
multi_thread_verifier = []
default = ["multi_thread_prover", "multi_thread_verifier"]
