[package]
name = "zk"
version = "0.1.0"
edition = "2024"

[dependencies]
cortado = {path = "../cortado"}
ark-ec = { workspace = true }
ark-ff = { workspace = true }
ark-serialize = { workspace = true }
ark-std = { workspace = true }
bulletproofs = { workspace = true, features = ["yoloproofs"] }
curve25519-dalek = { workspace = true, features = ["digest", "group", "rand_core", "serde"] }
ark-ed25519 = "0.5.0"
chrono = "0.4.41"
hex = "0.4.3"
merlin = "3.0.0"
rand = "0.8.5"
rand_core = "0.6.4"
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"]}
zkp = { workspace = true, git = "https://github.com/juja256/zkp", features = ["rangeproof", "rangeproof_batchable"]}
once_cell = "1.21.3"

[profile.test]
inherits = "release"

[features]
multi_thread_prover = []
multi_thread_verifier = []
default = ["multi_thread_prover", "multi_thread_verifier"]
