[package]
name = "network-example"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.37.0", features = ["full"] }
libp2p = { version = "0.55.0", features = [ "tokio", "gossipsub", "mdns", "noise", "macros", "tcp", "yamux", "quic", "serde"] }
futures = "0.3.30"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
hibbe = { path = "../hibbe" }
serde_json = "1.0.140"
serde = { version = "1.0.219", features = ["derive"] }
sha2 = "0.10.8"
