[package]
name = "relative_implementation"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"
doctest = false

[[bin]]
name = "example_relative_implementation"
path = "src/main.rs"
test = false

[dependencies]
ark-bn254 = "0.5.0"
ark-ec = {  version = "0.5.0" }
ark-ff = "0.5.0"
ark-std = "0.5.0"
num = "0.4.3"
sha2 = "0.10.8"
rand = "0.8.5"
hkdf = "0.12.4"
hex-literal = "1.0.0"
aes = "0.8.4"
aes-gcm = "0.10.3"
serde = { version = "1.0.219", features = ["derive", "rc"] }
serde_json = "1.0.140"
ark-serialize = { version = "0.5.0", features = ["derive"] }
