[package]
name = "zk"
version = "0.1.0"
edition = "2024"

[dependencies]
ark-algebra-test-templates = "0.5.0"
ark-ec = "0.5.0"
ark-ff = "0.5.0"
ark-serialize = "0.5.0"
ark-std = "0.5.0"
bulletproofs = { version = "5.0.0", git = "https://github.com/zkcrypto/bulletproofs", features = ["yoloproofs"] }
curve25519-dalek = { version = "4.1.1", features = ["digest", "group", "rand_core", "serde"] }
hex = "0.4.3"
merlin = "3.0.0"
rand = "0.8.5"
rand_core = "0.6.4"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"]}
